CREATE TABLE IF NOT EXISTS "SYS_Company" (
    "Id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Code" VARCHAR(20) NOT NULL,
    "Name" VARCHAR(200) NOT NULL,
    "TaxCode" VARCHAR(20),
    "Address" TEXT,
    "Phone" VARCHAR(30),
    "Email" VARCHAR(200),
    "IsActive" BOOLEAN NOT NULL DEFAULT TRUE,
    "CreatedAt" TIMESTAMPTZ NOT NULL,
    "CreatedBy" VARCHAR(100),
    "UpdatedAt" TIMESTAMPTZ,
    "UpdatedBy" VARCHAR(100),
    "IsDeleted" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE IF NOT EXISTS "SYS_User" (
    "Id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "UserName" VARCHAR(100) NOT NULL,
    "PasswordHash" VARCHAR(500) NOT NULL,
    "FullName" VARCHAR(200) NOT NULL,
    "Role" VARCHAR(50) NOT NULL,
    "IsActive" BOOLEAN NOT NULL DEFAULT TRUE,
    "CreatedAt" TIMESTAMPTZ NOT NULL,
    "CreatedBy" VARCHAR(100),
    "UpdatedAt" TIMESTAMPTZ,
    "UpdatedBy" VARCHAR(100),
    "IsDeleted" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE IF NOT EXISTS "SYS_RefreshToken" (
    "Id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "UserId" BIGINT NOT NULL REFERENCES "SYS_User"("Id") ON DELETE CASCADE,
    "TokenHash" VARCHAR(128) NOT NULL,
    "ExpiresAt" TIMESTAMPTZ NOT NULL,
    "RevokedAt" TIMESTAMPTZ,
    "ReplacedByTokenHash" VARCHAR(128),
    "CreatedAt" TIMESTAMPTZ NOT NULL,
    "CreatedBy" VARCHAR(100),
    "UpdatedAt" TIMESTAMPTZ,
    "UpdatedBy" VARCHAR(100),
    "IsDeleted" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE IF NOT EXISTS "AR_SalesPerson" (
    "Id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Code" VARCHAR(20) NOT NULL,
    "Name" VARCHAR(200) NOT NULL,
    "CompanyId" BIGINT NOT NULL REFERENCES "SYS_Company"("Id"),
    "Phone" VARCHAR(30),
    "Email" VARCHAR(200),
    "IsActive" BOOLEAN NOT NULL DEFAULT TRUE,
    "CreatedAt" TIMESTAMPTZ NOT NULL,
    "CreatedBy" VARCHAR(100),
    "UpdatedAt" TIMESTAMPTZ,
    "UpdatedBy" VARCHAR(100),
    "IsDeleted" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE IF NOT EXISTS "AR_Customer" (
    "Id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Code" VARCHAR(20) NOT NULL,
    "Name" VARCHAR(200) NOT NULL,
    "CompanyId" BIGINT NOT NULL REFERENCES "SYS_Company"("Id"),
    "SalesPersonId" BIGINT REFERENCES "AR_SalesPerson"("Id") ON DELETE SET NULL,
    "Address" TEXT,
    "Phone" VARCHAR(30),
    "CustomerType" SMALLINT NOT NULL DEFAULT 1,
    "IsActive" BOOLEAN NOT NULL DEFAULT TRUE,
    "CreatedAt" TIMESTAMPTZ NOT NULL,
    "CreatedBy" VARCHAR(100),
    "UpdatedAt" TIMESTAMPTZ,
    "UpdatedBy" VARCHAR(100),
    "IsDeleted" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE IF NOT EXISTS "IN_Site" (
    "Id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Code" VARCHAR(20) NOT NULL,
    "Name" VARCHAR(200) NOT NULL,
    "CompanyId" BIGINT NOT NULL REFERENCES "SYS_Company"("Id"),
    "Address" TEXT,
    "IsActive" BOOLEAN NOT NULL DEFAULT TRUE,
    "CreatedAt" TIMESTAMPTZ NOT NULL,
    "CreatedBy" VARCHAR(100),
    "UpdatedAt" TIMESTAMPTZ,
    "UpdatedBy" VARCHAR(100),
    "IsDeleted" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE IF NOT EXISTS "IN_Item" (
    "Id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Code" VARCHAR(20) NOT NULL,
    "Name" VARCHAR(200) NOT NULL,
    "Unit" VARCHAR(20) NOT NULL,
    "Barcode" VARCHAR(50),
    "Price" NUMERIC(18,2) NOT NULL,
    "VatRate" NUMERIC(5,2) NOT NULL,
    "IsActive" BOOLEAN NOT NULL DEFAULT TRUE,
    "CreatedAt" TIMESTAMPTZ NOT NULL,
    "CreatedBy" VARCHAR(100),
    "UpdatedAt" TIMESTAMPTZ,
    "UpdatedBy" VARCHAR(100),
    "IsDeleted" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE IF NOT EXISTS "IN_Inventory" (
    "Id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "SiteId" BIGINT NOT NULL REFERENCES "IN_Site"("Id"),
    "ItemId" BIGINT NOT NULL REFERENCES "IN_Item"("Id"),
    "Quantity" NUMERIC(18,3) NOT NULL,
    "ReservedQuantity" NUMERIC(18,3) NOT NULL DEFAULT 0
);

CREATE UNIQUE INDEX IF NOT EXISTS "UX_SYS_Company_Code" ON "SYS_Company"("Code");
CREATE UNIQUE INDEX IF NOT EXISTS "UX_SYS_User_UserName" ON "SYS_User"("UserName");
CREATE UNIQUE INDEX IF NOT EXISTS "UX_SYS_RefreshToken_TokenHash" ON "SYS_RefreshToken"("TokenHash");
CREATE UNIQUE INDEX IF NOT EXISTS "UX_AR_SalesPerson_Code" ON "AR_SalesPerson"("Code");
CREATE UNIQUE INDEX IF NOT EXISTS "UX_AR_Customer_Code" ON "AR_Customer"("Code");
CREATE UNIQUE INDEX IF NOT EXISTS "UX_IN_Site_Code" ON "IN_Site"("Code");
CREATE UNIQUE INDEX IF NOT EXISTS "UX_IN_Item_Code" ON "IN_Item"("Code");
CREATE UNIQUE INDEX IF NOT EXISTS "UX_IN_Inventory_SiteId_ItemId" ON "IN_Inventory"("SiteId", "ItemId");

CREATE INDEX IF NOT EXISTS "IX_AR_SalesPerson_CompanyId" ON "AR_SalesPerson"("CompanyId");
CREATE INDEX IF NOT EXISTS "IX_AR_Customer_CompanyId" ON "AR_Customer"("CompanyId");
CREATE INDEX IF NOT EXISTS "IX_AR_Customer_SalesPersonId" ON "AR_Customer"("SalesPersonId");
CREATE INDEX IF NOT EXISTS "IX_IN_Site_CompanyId" ON "IN_Site"("CompanyId");
CREATE INDEX IF NOT EXISTS "IX_IN_Inventory_SiteId" ON "IN_Inventory"("SiteId");
CREATE INDEX IF NOT EXISTS "IX_IN_Inventory_ItemId" ON "IN_Inventory"("ItemId");
CREATE INDEX IF NOT EXISTS "IX_SYS_RefreshToken_UserId" ON "SYS_RefreshToken"("UserId");

INSERT INTO "SYS_Company" ("Code", "Name", "TaxCode", "Address", "Phone", "Email", "CreatedAt")
VALUES ('NPP001', 'Default Distributor', '0000000000', 'Ho Chi Minh City', '0900000000', 'ops@example.com', NOW())
ON CONFLICT ("Code") DO NOTHING;

INSERT INTO "AR_SalesPerson" ("Code", "Name", "CompanyId", "Phone", "CreatedAt")
SELECT 'SP001', 'Default Sales', "Id", '0900000001', NOW()
FROM "SYS_Company"
WHERE "Code" = 'NPP001'
ON CONFLICT ("Code") DO NOTHING;

INSERT INTO "IN_Site" ("Code", "Name", "CompanyId", "Address", "CreatedAt")
SELECT 'WH001', 'Main Warehouse', "Id", 'Ho Chi Minh City', NOW()
FROM "SYS_Company"
WHERE "Code" = 'NPP001'
ON CONFLICT ("Code") DO NOTHING;

INSERT INTO "IN_Item" ("Code", "Name", "Unit", "Barcode", "Price", "VatRate", "CreatedAt")
VALUES ('ITEM001', 'Sample Item', 'case', '893000000001', 100000, 8, NOW())
ON CONFLICT ("Code") DO NOTHING;

INSERT INTO "AR_Customer" ("Code", "Name", "CompanyId", "SalesPersonId", "Address", "Phone", "CreatedAt")
SELECT 'CUS001', 'Default Retail Customer', c."Id", sp."Id", 'Ho Chi Minh City', '0900000002', NOW()
FROM "SYS_Company" c
JOIN "AR_SalesPerson" sp ON sp."Code" = 'SP001'
WHERE c."Code" = 'NPP001'
ON CONFLICT ("Code") DO NOTHING;

INSERT INTO "IN_Inventory" ("SiteId", "ItemId", "Quantity", "ReservedQuantity")
SELECT s."Id", i."Id", 100, 0
FROM "IN_Site" s
JOIN "IN_Item" i ON i."Code" = 'ITEM001'
WHERE s."Code" = 'WH001'
ON CONFLICT ("SiteId", "ItemId") DO NOTHING;
